stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    kubernetes.io/metadata.name: ingress
  name: ingress
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
