stage/ingress-global.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  generation: 1
  name: ingress-global
  namespace: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: *.ribas.ca
    http:
      paths:
      - pathType: Prefix
        path: "/argocd"
        backend:
          service:
            name: argocd-server
            port:
              name: https
status:
  loadBalancer: {}
